fixed bugs of z-index and other

--- a/module-6/style.css
+++ b/module-6/style.css
@@ -292,7 +292,7 @@ html {
   position: relative;
   top: 0;
   left: 0;
-  z-index: 1;
+  /* z-index: 1; */
   transition-property: all;
   transition-duration: 200ms;
   transition-timing-function: linear;
@@ -331,7 +331,7 @@ html {
   align-items: center;
   opacity: 0;
   background: linear-gradient(#ed8889, #eed787);
-  z-index: 10;
+  /* z-index: 10; */
   transition-property: all;
   transition-duration: 190ms;
   transition-timing-function: linear;
